--- a/lotto-game/src/App.scss
+++ b/lotto-game/src/App.scss
@@ -1,39 +1,16 @@
-.lotto-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  margin-top: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  .lotto-row {
-    display: flex;
-    gap: 5px;
-  }
+body{
+  background-color: #171717;
+  font-family: 'Montserrat', sans-serif;
+}
 
-  .lotto-cell {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    background-color: #f8f8f8;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
+.app{
+  margin-top: 100px;
+}
 
-  button {
-    margin-top: 10px;
-    padding: 8px 16px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-
-    &:hover {
-      background-color: #0056b3;
-    }
-  }
+h1{
+  margin: 40px auto;
+  text-align: center;
+  color: #fff;
 }
